# combo_gen

./: CITATION.cff  README.md
COMBO_GEN_v1/: Cargo.toml  README2.md
COMBO_GEN_v2/src/: combo_gen_optimized.rs
ESP-32/: README.md  combo_gen.ino
Rust-GPU/v1/: version_comparison.md
Rust-GPU/v1/src/: combo_gen_ultra.rs
Rust/combo_gen/: .gitignore  Cargo.toml  CheetSheet.md  README.md
Rust/combo_gen/src/: main.rs
Rust/combo_gen_fast/: Cargo.toml  CheatSheet.md  README.md  combo_gen_ultra.rs  optimization_guide.md  updated_readme.md
Rust/combo_gen_fast/src/: combo_gen_optimized.rs  main.rs
Rust/v1/src/: main.rs
Rust/v2/: .gitignore
Rust/v2/src/: combo_gen_fixed.rs  combo_gen_optimized.rs
