[package]
name = "combo_gen"
version = "0.1.0"
edition = "2021"
[dependencies]
num_cpus = "1.16.0"
indicatif = "0.17.8"
flate2 = "1.0"
[[bin]]
name = "combo_gen_fixed"
path = "src/combo_gen_fixed.rs"
[[bin]]
name = "combo_gen_optimized"
path = "src/combo_gen_optimized.rs"
[[bin]]
name = "combo_gen_ultra"
path = "src/combo_gen_ultra.rs"
[[bin]]
name = "combo_gen"
path = "src/main.rs"
